<resources>
    <!--汉子占位符： 1个汉字 = 4个&#160; = 4个&#8197; = 1个&#12288; = 2个&#8194; -->
    <string name="app_name">AsDemo</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="loading">加载中...</string>
    <string name="exit_notice">"再点击一次退出程序"</string>
    <string name="exit_ok">"退出程序成功"</string>

    <!--登录页面-->
    <string name="user_name_hint">请输入账号</string>
    <string name="user_pwd_hint">请输入密码</string>
    <string name="remember_pwd">记住密码&#12288;</string>
    <string name="null_text">&#12288;&#12288;</string>
    <string name="admin_login">管理员登录</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_btn">登&#12288;&#12288;录</string>
    <string name="login_name_null">登录账户不能为空</string>
    <string name="login_name_illegal">登录账户不是合法的手机号码</string>
    <string name="login_pwd_null">登录密码不能为空</string>
    <string name="login_request_success">登录成功</string>
    <string name="login_request_failed">登录失败</string>
    <string name="meter_info_request_failed">获取表信息失败</string>
    <string name="copyright">宁夏隆基宁光仪表股份有限公司 . All Right Reserved</string>

    <!--系统首页-->
    <string name="index_title">首&#12288;&#12288;页</string>
    <string name="index_item_01">远程充值</string>
    <string name="index_item_02">查询余额</string>
    <string name="index_item_03">冻结数据</string>
    <string name="index_item_04">拉闸合闸</string>
    <string name="index_item_05">异常上报</string>
    <string name="index_item_06">系统设置</string>


    <string name="update_pwd_title">修改密码</string>
    <string name="update_pwd_text">欢迎登录系统，请修改默认密码</string>
    <string name="update_pwd_ok">确&#12288;&#12288;定</string>

    <!--修改密码-->
    <string name="upda_pwd_title">修改密码</string>
    <string name="old_pwd">当前密码：</string>
    <string name="old_pwd_hint">请输入当前密码</string>
    <string name="new_pwd">新&#8194;密&#8194;码：</string>
    <string name="new_pwd_hint">请输入新密码</string>
    <string name="confirm_new_pwd">确认密码：</string>
    <string name="confirm_new_pwd_hint">确认新密码</string>
    <string name="confirm_submit">确认提交</string>
    <string name="update_pwd_success">密码修改成功,请重新登录</string>
    <string name="updata_pwd_failed">密码修改失败</string>

    <!--充值页面-->
    <string name="pay_amount_text">充&#12288;&#12288;值</string>
    <string name="pay_order_title">充值订单</string>
    <string name="recharge_number">充值表号：</string>
    <string name="user_account">用户账号：</string>
    <string name="recharge_amount">充值金额：</string>
    <string name="input_recharge_amount">请输入或选择充值金额</string>
    <string name="select_recharge_amount">请选择充值金额</string>
    <string name="recharge_unit">元</string>

    <!--查询余额页面-->
    <string name="query_balance_titile">查询余额</string>
    <string name="balance_info">余额信息</string>
    <string name="custom_name">用户姓名：</string>
    <string name="meter_address">电表地址：</string>
    <string name="custom_phone">手机号码：</string>
    <string name="custom_address">装表地址：</string>
    <string name="meter_balance">当前余额：</string>
    <string name="query_submit">查&#12288;&#12288;询</string>

    <!--拉合闸页面-->
    <string name="switch_power_titile">充值订单</string>
    <string name="switch_out_success">拉闸成功</string>
    <string name="switch_in_success">合闸成功</string>
    <string name="option_failed">操作失败，请重试!</string>
    <!--冻结数据查询页面-->
    <string name="query_freeze_titile">冻结数据</string>
    <string name="custom_name_lable">客户姓名：</string>
    <string name="custom_meter_num">客户表号：</string>
    <string name="use_level">总计用量：</string>
    <string name="min_time">最小日期：</string>
    <string name="max_time">最大日期：</string>
    <string name="min_rawval">最小读数：</string>
    <string name="max_rawval">最大度数：</string>
    <string name="customer_address">客户地址：</string>


    <!--系统设置页面-->
    <string name="sys_setting_title">退出程序</string>
    <string name="exit_login_btn">退出程序</string>


    <!--关于我们页面-->
    <string name="about_us_title">关于我们</string>

    <!--意见反馈页面-->
    <string name="feedback_title">意见反馈</string>
    <string name="feedback_btn">开始反馈</string>


    <string name="permission">权限(permission)</string>
    <string name="no_permissions">应用需要必要的运行权限</string>

    <string name="settings">设置</string>
    <string name="help">帮助</string>
    <string name="string_help_text">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。\n\n最后点击两次后退按钮，即可返回。</string>
    <string name="quit">退出</string>

</resources>
