<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/title_bar_layout"
        layout="@layout/title_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_bar_layout"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_50"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/editor_bg"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/old_pwd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_17" />

            <EditText
                android:id="@+id/old_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/old_pwd_hint"
                android:singleLine="true"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_marginTop="@dimen/dp_15"
            android:background="@drawable/editor_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/new_pwd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_17" />

            <EditText
                android:id="@+id/new_pwd_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/new_pwd_hint"
                android:singleLine="true"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginBottom="@dimen/dp_15"
            android:background="@drawable/editor_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/confirm_new_pwd"
                android:textColor="@android:color/black"
                android:textSize="@dimen/dp_17" />

            <EditText
                android:id="@+id/confirm_new_psw_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="@color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/confirm_new_pwd_hint"
                android:singleLine="true"
                android:textSize="@dimen/dp_13" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_submit_btn"
        style="@style/btn_view_style"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_48"
        android:text="@string/confirm_submit" />
</RelativeLayout>